# avp-sdk

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_PYPI.md  ROADMAP.md  SECURITY.md  glama.json  pyproject.toml
.github/workflows/: publish.yml  tests.yml
agentveil/: __init__.py  agent.py  auth.py  delegation.py  exceptions.py  mock.py  pow.py  proof.py  results.py  tracked.py
agentveil/tools/: __init__.py  autogen.py  claude_mcp.py  crewai.py  langgraph.py  openai.py  paperclip.py
agentveil_mcp/: README.md  __init__.py  __main__.py  server.py
agentveil_mcp_proxy/: README.md  __init__.py  classification.py  cli.py  identity.py  passthrough.py  policy.py  runtime_gate.py
agentveil_mcp_proxy/approval/: __init__.py  headless.py  manager.py  notification.py  server.py
agentveil_mcp_proxy/evidence/: proof.py  store.py
avp_sdk/: __init__.py  agent.py  tracked.py
contexts/delegation/: v1.jsonld
docs/: API.md  APPROVAL_ROUTING.md  CUSTOMER_INTEGRATION.md  DATA_HANDLING.md  INTEGRATIONS.md  LIVE_DEVELOPER_ADOPTION_SMOKE.md  MCP_PROXY_DESIGN_PRINCIPLES.md  MCP_PROXY_OPERATIONS.md  MCP_PROXY_V0_1_PLAN.md  MODE_A_QUICKSTART.md  PILOT_READINESS_CHECKLIST.md  PROOF_PACKET.md  PROTOCOL.md  REGISTRATION.md  SECURITY_CONTEXT.md  SECURITY_MODEL.md  SPEC.md  demo.cast
examples/: approval_flow.py  autogen_example.py  aws_bedrock.py  claude_mcp_example.py  crewai_example.py  demo_gif.py  first_controlled_action.py  jobs_demo.py  langgraph_example.py  live_developer_adoption_smoke.py  mcp_proxy_headless_policy.json  openai_example.py  paperclip_example.py  quickstart.py  standalone_demo.py  two_agents.py
examples/delegation/: README.md  _generate_samples.py  verify.py
examples/delegation/samples/: expired.json  tampered.json  valid.json
examples/proof_pack/: README.md
examples/registration/: README.md  first_time_setup.py  reload_existing.py
mcp_server/: Dockerfile  README.md  __init__.py  __main__.py  server.py
scripts/: verify_wheel.sh
skills/avp-trust-enforcement/: SKILL.md
tests/: conftest.py  test_auth.py  test_contract.py  test_controlled_action.py  test_delegation_issuance.py  test_e2e_mock.py  test_exceptions.py  test_http_responses.py  test_identity.py  test_live_e2e.py  test_mcp_hosted.py  test_mcp_packaging.py  test_mcp_proxy_approval.py  test_mcp_proxy_circuit_breaker.py  test_mcp_proxy_classification.py  test_mcp_proxy_cli.py  test_mcp_proxy_evidence.py  test_mcp_proxy_multi_instance.py  test_mcp_proxy_passthrough.py  test_mcp_proxy_passthrough_concurrent.py  test_mcp_proxy_policy.py  test_mcp_proxy_proof.py  test_mcp_proxy_runtime_gate.py  test_mock.py  test_openapi_contract.py  test_pow.py  test_proof_verification.py  test_tracked.py
tests/live/: mcp_proxy_approval_smoke.py  mcp_proxy_runtime_gate_smoke.py
