[project]
name = "agentveil"
version = "0.7.2"
description = "Python SDK for Agent Veil Protocol — reputation and identity for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Oleg Boiko", email = "ob@agentveil.dev"}]
maintainers = [{name = "Oleg Boiko", email = "ob@agentveil.dev"}]
keywords = ["ai", "agents", "reputation", "did", "identity", "a2a", "hermes", "mcp", "trust", "eigentrust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.27.0",
    "pynacl>=1.5.0",
    "base58>=2.1.0",
    "jcs>=0.2.1",
]

[project.urls]
Homepage = "https://agentveil.dev"
Documentation = "https://github.com/agentveil-protocol/avp-sdk#readme"
Repository = "https://github.com/agentveil-protocol/avp-sdk"
Changelog = "https://github.com/agentveil-protocol/avp-sdk/releases"
Issues = "https://github.com/agentveil-protocol/avp-sdk/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
mcp = ["mcp>=1.0.0"]

[project.scripts]
agentveil-mcp = "agentveil_mcp.server:main"

[tool.setuptools.packages.find]
include = ["agentveil*", "agentveil_mcp*", "mcp_server*"]

[tool.setuptools.package-data]
agentveil_mcp = ["README.md"]
mcp_server = ["README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
