[project]
name = "agentveil"
version = "0.7.9"
description = "Python SDK for AgentVeil: agent identity, action gates, signed receipts, and proof packets"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Oleg Boiko", email = "ob@agentveil.dev"}]
maintainers = [{name = "Oleg Boiko", email = "ob@agentveil.dev"}]
keywords = ["ai", "agents", "agent-control", "runtime-gate", "controlled-actions", "signed-receipts", "did", "identity", "mcp", "reputation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.27.0",
    "pynacl>=1.5.0",
    "base58>=2.1.0",
    "jcs>=0.2.1",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://agentveil.dev"
Documentation = "https://github.com/agentveil-protocol/avp-sdk#readme"
Repository = "https://github.com/agentveil-protocol/avp-sdk"
Changelog = "https://github.com/agentveil-protocol/avp-sdk/releases"
Issues = "https://github.com/agentveil-protocol/avp-sdk/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
mcp = ["mcp>=1.0.0"]

[project.scripts]
agentveil-mcp = "agentveil_mcp.server:main"

[tool.setuptools.packages.find]
include = ["agentveil*", "agentveil_mcp*", "mcp_server*"]

[tool.setuptools.package-data]
agentveil_mcp = ["README.md"]
mcp_server = ["README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
